envoy-duplicate-addresses/gateway.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
          - name: envoy.access_loggers.file
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              path: /dev/stdout
              format: "[GATEWAY %START_TIME%] %DOWNSTREAM_REMOTE_ADDRESS% \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% UPSTREAM_HOST=%UPSTREAM_HOST%\n"
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: server
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: server
    connect_timeout: 5s
    type: STATIC
    lb_policy: ROUND_ROBIN
    transport_socket_matches:
    - name: srv1
      match:
        sni: srv1
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          sni: srv1.example.com
          common_tls_context:
            validation_context:
              trusted_ca:
                filename: /etc/envoy/certs/ca.crt
    - name: srv2
      match:
        sni: srv2
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          sni: srv2.example.com
          common_tls_context:
            validation_context:
              trusted_ca:
                filename: /etc/envoy/certs/ca.crt
    load_assignment:
      cluster_name: server
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: server
                port_value: 10443
          metadata:
            filter_metadata:
              envoy.transport_socket_match:
                sni: srv1
        - endpoint:
            address:
              socket_address:
                address: server
                port_value: 10443
          metadata:
            filter_metadata:
              envoy.transport_socket_match:
                sni: srv2
